# Eutopia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  data_type.cpp  data_type.h  graph_builder.h  logging.cpp  logging.h
core/framework/: attr_value.pb.cc  attr_value.pb.h  attr_value.proto  error_codes.pb.cc  error_codes.pb.h  error_codes.proto  graph_def.pb.cc  graph_def.pb.h  graph_def.proto  node_def.pb.cc  node_def.pb.h  node_def.proto  resource_handle.pb.cc  resource_handle.pb.h  resource_handle.proto  tensor.pb.cc  tensor.pb.h  tensor.proto  tensor_shape.pb.cc  tensor_shape.pb.h  tensor_shape.proto  types.pb.cc  types.pb.h  types.proto
core/ir/: chunk.cpp  chunk.h  graph.cpp  graph.h  graph_builder.h  node.cpp  node.h  proto_interface.cpp  tensor.cpp  tensor.h  tensor_operate.h
cv/: opencv_interface.cpp  opencv_interface.h
io/: cfg_parser.cpp  cfg_parser.h  graph_builder.h  parser.cpp  parser.h
op/: CMakeLists.txt  base_param.h  op.cpp  op.h  ops_name.h  ops_param.h
op/cpu/: convolution.cpp  convolution2D.cpp  convolution2D.h  convolution2d.cpp  fully_connected.cpp  fully_connected.h  input.cpp  input.h  op_register.h  pooling.cpp  pooling.h
op/cpu/compute/: avtivation.cpp  avtivation.h  batch_norm.cpp  batch_norm.h  blas.cpp  blas.h  gemm.cpp  gemm.h  im2col.cpp  im2col.h  quantize_feature.cpp  quantize_feature.h  quantize_weight.cpp  quantize_weight.h
op/ops_param/: base_param.cpp  base_param.h  convolution2D_param.cpp  convolution2D_param.h  fully_connected_param.cpp  fully_connected_param.h  input_param.cpp  input_param.h  pooling_param.cpp  pooling_param.h
test/: CMakeLists.txt  EutopiaTest.h  main.cc
tools/: CMakeLists.txt  app.cpp  main.cpp
tools/cfg/: alexnet.cfg
utils/: distributions.cpp  distributions.h  filler.cpp  filler.h
